fix: update links in terms of use dialog and correct billing descriptions in premium page

--- a/src/app/components/terms-of-use-dialog/terms-of-use-dialog.component.html
+++ b/src/app/components/terms-of-use-dialog/terms-of-use-dialog.component.html
@@ -3,8 +3,8 @@
 
     <mat-dialog-content class="terms-content">
         <h3>Privacy Policy / Terms & Conditions</h3>
-        <p>To continue you must agree with our <a href="https://www.blockcore.net/privacy/" target="_blank"
-                rel="noopener noreferrer">Privacy Policy</a> and <a href="https://www.blockcore.net/terms/"
+        <p>To continue you must agree with our <a href="https://www.nostria.app/privacy/" target="_blank"
+                rel="noopener noreferrer">Privacy Policy</a> and <a href="https://www.nostria.app/terms/"
                 target="_blank" rel="noopener noreferrer">Terms & Conditions.</a></p>
 
         <h3>Consent</h3>
