--- a/src/app/pages/premium/premium.component.html
+++ b/src/app/pages/premium/premium.component.html
@@ -9,14 +9,32 @@
         Upgrade to Premium
       </button>
 
+      <br><br>
+      <h2>Premium</h2>
+
       <div class="premium-price-container">
         <div class="price-option">
           <span class="price-amount">$10</span>/month
-          <span class="price-period">quarterly billing</span>
+          <span class="price-period">montly billing</span>
         </div>
         <span class="price-divider">or</span>
         <div class="price-option best-value">
           <span class="price-amount">$8</span>/month
+          <span class="price-period">yearly billing</span>
+          <span class="price-tag">Best Value</span>
+        </div>
+      </div>
+
+      <h2>Premium+</h2>
+
+      <div class="premium-price-container">
+        <div class="price-option">
+          <span class="price-amount">$25</span>/month
+          <span class="price-period">montly billing</span>
+        </div>
+        <span class="price-divider">or</span>
+        <div class="price-option best-value">
+          <span class="price-amount">$20</span>/month
           <span class="price-period">yearly billing</span>
           <span class="price-tag">Best Value</span>
         </div>
