--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -41,10 +41,13 @@
         <li><a href="https://github.com/sondreb/nostria/releases" target="_blank"  rel="noopener noreferrer">Downloads</a></li>
       </ul>
 
-      <h3>Architecture</h3>
+      <h3>More information</h3>
       <p>
-        The client is built on Angular and Angular Material. It is utilizing Tauri to package the app for desktop users.
+        Visit our website for more information, documentation, and support.
       </p>
+      <ul>
+        <li><a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a></li>
+      </ul>
 
       <div class="links-section">
         <h3>Useful Links</h3>
