Add a beta indicator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <img src="icons/icon.svg" class="app-icon hide-tiny" alt="Nostria icon">
     <span class="app-title title-font hide-small">
       {{title}}
+      <span class="beta-indicator">BETA</span>
     </span>
 
     <span class="toolbar-spacer">
