feat: introduce ContentComponent for note content rendering

--- a/src/app/pages/profile/profile-notes/profile-notes.component.html
+++ b/src/app/pages/profile/profile-notes/profile-notes.component.html
@@ -22,7 +22,8 @@
               {{ note.created_at | ago }}
             </a>
           </app-user-profile>
-          <mat-card-content>{{note.content}}</mat-card-content>
+          <app-content [content]="note.content" [event]="note"></app-content>
+          <!-- <mat-card-content>{{note.content}}</mat-card-content> -->
           <mat-card-footer class="note-footer">
             <button mat-icon-button>
               <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
