--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,44 +1,48 @@
-<div class="content-container">
-  @for (token of contentTokens(); track token.id) {
-    @if (token.type === 'text') {
-      <span>{{token.content}}</span>
-    } @else if (token.type === 'linebreak') {
-      <br>
-    } @else if (token.type === 'url') {
-      <a [href]="token.content" target="_blank" rel="noopener noreferrer">{{token.content}}</a>
-    } @else if (token.type === 'youtube') {
-      <div class="media-container">
-        <iframe
-          width="560"
-          height="315"
-          [src]="getYouTubeEmbedUrl(token.content)"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
-    } @else if (token.type === 'image') {
-      <div class="media-container">
-        <img [src]="token.content" alt="Content image" loading="lazy">
-      </div>
-    } @else if (token.type === 'audio') {
-      <div class="media-container">
-        <audio controls>
-          <source [src]="token.content">
-          Your browser does not support the audio element.
-        </audio>
-      </div>
-    } @else if (token.type === 'video') {
-      <div class="media-container">
-        <video controls>
-          <source [src]="token.content" type="video/{{getVideoType(token.content)}}">
-          Your browser does not support the video element.
-        </video>
-      </div>
+<div class="content-container" #contentContainer>
+  @defer (when isVisible()) {
+    @for (token of contentTokens(); track token.id) {
+      @if (token.type === 'text') {
+        <span>{{token.content}}</span>
+      } @else if (token.type === 'linebreak') {
+        <br>
+      } @else if (token.type === 'url') {
+        <a [href]="token.content" target="_blank" rel="noopener noreferrer">{{token.content}}</a>
+      } @else if (token.type === 'youtube') {
+        <div class="media-container">
+          <iframe
+            width="560"
+            height="315"
+            [src]="getYouTubeEmbedUrl(token.content)"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
+        </div>
+      } @else if (token.type === 'image') {
+        <div class="media-container">
+          <img [src]="token.content" alt="Content image" loading="lazy">
+        </div>
+      } @else if (token.type === 'audio') {
+        <div class="media-container">
+          <audio controls>
+            <source [src]="token.content">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      } @else if (token.type === 'video') {
+        <div class="media-container">
+          <video controls>
+            <source [src]="token.content" type="video/{{getVideoType(token.content)}}">
+            Your browser does not support the video element.
+          </video>
+        </div>
+      }
     }
+    
+    @for (preview of socialPreviews(); track preview.url) {
+      <app-social-preview [url]="preview.url"></app-social-preview>
+    }
+  } @loading {
+    <div class="content-placeholder"></div>
   }
 </div>
-
-@for (preview of socialPreviews(); track preview.url) {
-    <app-social-preview [url]="preview.url"></app-social-preview>
-}
