feat: update social preview component for improved accessibility and styling

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -40,7 +40,7 @@
     }
     
     @for (preview of socialPreviews(); track preview.url) {
-      <app-social-preview [url]="preview.url"></app-social-preview>
+      <app-social-preview class="social-preview" [url]="preview.url"></app-social-preview>
     }
   } @loading {
     <div class="content-placeholder"></div>
