--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -43,9 +43,11 @@
         </div>
       }
     }
-    
+
     @for (preview of socialPreviews(); track preview.url) {
-      <app-social-preview class="social-preview" [url]="preview.url"></app-social-preview>
+      @if (settings.settings().socialSharingPreview) {
+        <app-social-preview class="social-preview" [url]="preview.url"></app-social-preview>
+      }
     }
   } @loading {
     <div class="content-placeholder"></div>
