feat: unify mouse and touch event handling in image dialog for improved interaction

--- a/src/app/components/image-dialog/image-dialog.component.html
+++ b/src/app/components/image-dialog/image-dialog.component.html
@@ -17,10 +17,14 @@
   
   <div class="image-container"
        #containerElement
-       (mousedown)="onMouseDown($event)"
-       (mousemove)="onMouseMove($event)"
-       (mouseup)="onMouseUp()"
-       (mouseleave)="onMouseUp()"
+       (mousedown)="onPointerDown($event)"
+       (mousemove)="onPointerMove($event)"
+       (mouseup)="onPointerUp()"
+       (mouseleave)="onPointerUp()"
+       (touchstart)="onPointerDown($event)"
+       (touchmove)="onPointerMove($event)"
+       (touchend)="onPointerUp()"
+       (touchcancel)="onPointerUp()"
        (wheel)="onWheel($event)">
     <img 
       #imageElement
