feat: improve image dragging experience with enhanced cursor styles and touch event handling

--- a/src/app/components/image-dialog/image-dialog.component.html
+++ b/src/app/components/image-dialog/image-dialog.component.html
@@ -31,6 +31,8 @@
       [src]="dialogData.imageUrl" 
       [style.transform]="getTransformStyle()"
       [ngClass]="{'draggable': scale() > 1}"
-      alt="Full size image">
+      [style.cursor]="isDragging() ? 'grabbing' : (scale() > 1 ? 'grab' : 'default')"
+      alt="Full size image"
+      draggable="false">
   </div>
 </div>
