feat: add demo notice for payment step in upgrade process

--- a/src/app/pages/premium/upgrade/upgrade.component.html
+++ b/src/app/pages/premium/upgrade/upgrade.component.html
@@ -74,6 +74,9 @@
         (click)="nextStep()">
         Next
       </button>
+
+      THIS IS JUST A DEMO, NO REAL PAYMENT
+
     </div>
   </div>
   }
